# os-release-rs

./: 404.html  Cargo.toml  README.md  index.html  install.html  print.html  searchindex.js  searchindex.json  usage.html
.github/ISSUE_TEMPLATE/: add_project.yml
.github/workflows/: deploy.yml
book/: book.toml
book/src/: SUMMARY.md  install.md  usage.md
src/: lib.rs
